--- a/templates/questionnaire/add.questionnaire.html
+++ b/templates/questionnaire/add.questionnaire.html
@@ -212,9 +212,7 @@
                         </div>
                     </div>
                     <div class="section-content">
-                        <!-- SECTION: Title -->
-
-
+                        <!-- SECTION: Title & description -->
                         <div class="row">
                             <div class="col-xs-12 side-menu-title">
                                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
