--- a/templates/questionnaire/add.question.html
+++ b/templates/questionnaire/add.question.html
@@ -2,7 +2,6 @@
     <div id="top">
         <div class="clearfix">
             <div class="row">
-
                 <!-- side bar: summary -->
                 <div class="col-lg-2">
                     <!-- Home logo-->
@@ -33,9 +32,9 @@
                             <!-- Summary -->
                             <div class="side-menu-title col-lg-12">
                                 <div class="horz-line" style="height: 10px; text-align: center">
-                    <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <h2>Summary</h2>
-                    </span>
+                                    <span style="background-color:#e6edfa; padding: 0 10px;">
+                                        <h2>Summary</h2>
+                                    </span>
                                 </div>
                             </div>
                             <div class="col-lg-12">
@@ -67,16 +66,14 @@
                                     <p style="margin-botton:5px">
                                         <strong>EN</strong>
                                         <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
-                                    <p ng-if="newQuestion.text_EN" style="padding-left:10px; font-size:10px;"><em>See rendered output for text</em></p>
-
+                                        {{newQuestion.text_EN}}
                                     </p>
                                 </div>
                                 <div ng-if="newQuestion.text_FR" class="description">
                                     <p style="margin-botton:5px">
                                         <strong>FR</strong>
                                         <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
-                                    <p ng-if="newQuestion.text_FR" style="padding-left:10px; font-size:10px;"><em>See rendered output for question</em></p>
-
+                                        {{newQuestion.text_FR}}
                                     </p>
                                 </div>
                             </div>
@@ -155,7 +152,6 @@
                         </div>
                     </div>
                 </div>
-
                 <!-- Right side detail view -->
                 <div class="col-xs-12 col-lg-10 animated fadeInRight">
                     <div class="row main-title">
@@ -166,8 +162,15 @@
                         </div>
                         <!-- Breadcrumbs -->
                         <div class="col-md-6 title-breadcrumbs">
-                <span>
-                  <a ui-sref="home">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a ui-sref="questionnaire-menu">Questionnaires</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a ui-sref="questionnaire-question">Manage</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Add Question</strong></span>
+                            <span>
+                                <a ui-sref="home">Home</a>
+                                <span class="glyphicon glyphicon-menu-right teflon"></span>
+                                <a ui-sref="questionnaire-menu">Questionnaires</a>
+                                <span class="glyphicon glyphicon-menu-right teflon"></span>
+                                <a ui-sref="questionnaire-question">Manage</a>
+                                <span class="glyphicon glyphicon-menu-right teflon"></span>
+                                <strong>Add Question</strong>
+                            </span>
                         </div>
                     </div>
 
@@ -184,9 +187,9 @@
                         </div>
                         <div class="mobile-summary col-xs-12 col-sm-offset-1 col-sm-6" ng-if="!checkForm()">
                             <div class="summary-title" style="text-align: right; margin-bottom: 5px;">
-                    <span style="padding: 0 10px;">
-                      <h2>Step {{numOfCompletedSteps}} of {{stepTotal}} Completed</h2>
-                    </span>
+                                <span style="padding: 0 10px;">
+                                    <h2>Step {{numOfCompletedSteps}} of {{stepTotal}} Completed</h2>
+                                </span>
                             </div>
                             <div class="progress progress-striped active">
                                 <div class="progress-bar" ng-class="{'progress-bar-success': stepProgress == 100}" role="progressbar" aria-valuenow="{{stepProgress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{stepProgress}}%">
@@ -207,10 +210,9 @@
                         <div class="row">
                             <div class="col-xs-12 side-menu-title">
                                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
-                      <span style="background-color:#e6edfa; padding: 0 10px;">
-                        <span class="fas fa-dot-circle"></span>
-                        <h2>Question</h2>
-                      </span>
+                                    <span style="background-color:#e6edfa; padding: 0 10px;">
+                                        <span class="fas fa-dot-circle"></span><h2>Question</h2>
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -232,9 +234,7 @@
                                     <div class="panel-body">
                                         <div class="row">
                                             <div class="col-md-12">
-
-                                                <div text-angular ng-model="newQuestion.text_EN" ng-change="updateQuestionText()" placeholder="English Question" ta-toolbar="toolbar"></div>
-                                                <!--<textarea class="form-control" rows="2" ng-model="newQuestion.text_EN" ng-change="updateQuestionText()"></textarea>-->
+                                                <textarea class="form-control" rows="2" ng-model="newQuestion.text_EN" ng-change="updateQuestionText()"></textarea>
                                             </div>
                                         </div>
                                     </div>
@@ -249,8 +249,7 @@
                                     <div class="panel-body">
                                         <div class="row">
                                             <div class="col-md-12">
-                                                <div text-angular ng-model="newQuestion.text_FR" ng-change="updateQuestionText()" placeholder="Question française" ta-toolbar="toolbar"></div>
-                                                <!--<textarea class="form-control" rows="2" ng-model="newQuestion.text_FR" ng-change="updateQuestionText()"></textarea>-->
+                                                <textarea class="form-control" rows="2" ng-model="newQuestion.text_FR" ng-change="updateQuestionText()"></textarea>
                                             </div>
                                         </div>
                                     </div>
@@ -265,10 +264,10 @@
                         <div class="row animated" ng-class="{fadeInUp: answerTypeSection.show}" ng-if="answerTypeSection.show">
                             <div class="col-xs-12 side-menu-title">
                                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
-                      <span style="background-color:#e6edfa; padding: 0 10px;">
-                        <span class="fas fa-dot-circle"></span>
-                        <h2>Response Type</h2>
-                      </span>
+                                    <span style="background-color:#e6edfa; padding: 0 10px;">
+                                        <span class="fas fa-dot-circle"></span>
+                                        <h2>Response Type</h2>
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -393,10 +392,7 @@
                                         <div class="input-group" style="margin-top:10px; margin-bottom:10px;width:100%;">
                                             <input class="form-control" style="width:20%" type="number" placeholder="Increment step" ng-model="newAnswerType.increment" ng-required="atCategory.category_EN === 'Slider'"/>
                                         </div>
-
                                     </div>
-
-
                                     <div class="col-xs-12 col-md-8">
                                         <div class="input-group" style="margin-top:10px; margin-bottom:10px;">
                                             <input class="form-control" style="width:50%" type="text" ng-model="newAnswerType.name_EN" placeholder="New Response Type (EN)" ng-disabled="!atCategory" required/>
@@ -422,7 +418,6 @@
                         </div>
                     </div>
                     <div class="row animated" ng-class="{fadeInUp: questionLibrarySection.show}" ng-if="questionLibrarySection.show">
-
                         <div class="col-xs-12" ng-init="content=1">
                             <p><label for="first"><input id="first" type="radio" name="content" ng-model="content" value="1" ng-click="decreaseStep()">No library needed.</label></p>
                         </div>
