--- a/templates/questionnaire/edit.question.html
+++ b/templates/questionnaire/edit.question.html
@@ -31,37 +31,19 @@
                     <strong>Titles</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': titleSection.open, 'glyphicon-chevron-right': !titleSection.open}"></i>
                 </div>
             </uib-accordion-heading>
-            <div class="row" ng-hide="question.readOnly || question.final">
-                <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
-                    <div style="text-align:center; margin-bottom: 10px;">
-                        <span style="font-size:20px;">HTML (English)</span>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
+                        <div class="input-group">
+                            <span class="input-group-addon">EN</span>
+                            <input type="text" class="form-control" ng-model="question.text_EN" placeholder="English Title" ng-change="setChangesMade()" ng-disabled="question.readOnly || question.final" />
+                        </div>
                     </div>
-                    <div class="input-group">
-                        <div text-angular ng-model="question.text_EN" ng-change="setChangesMade()" placeholder="English question" required="required" ta-toolbar="toolbar"  ng-change="setChangesMade()" ng-disabled="questionnaire.readOnly || questionnaire.final"></div>
+                    <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
+                        <div class="input-group">
+                            <span class="input-group-addon">FR</span>
+                            <input type="text" class="form-control" ng-model="question.text_FR" placeholder="Titre Français" ng-change="setChangesMade()" ng-disabled="question.readOnly || question.final" />
+                        </div>
                     </div>
-                </div>
-                <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
-                    <div style="text-align:center; margin-bottom: 10px;">
-                        <span style="font-size:20px;">HTML (Français)</span>
-                    </div>
-                    <div class="input-group">
-                        <div text-angular ng-model="question.text_FR" ng-change="setChangesMade()" placeholder="Question française" required="required" ta-toolbar="toolbar"  ng-change="setChangesMade()" ng-disabled="questionnaire.readOnly || questionnaire.final"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="row" ng-show="question.readOnly || question.final">
-                <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
-                    <div style="text-align:center; margin-bottom: 10px;">
-                        <span style="font-size:20px;">HTML (English)</span>
-                    </div>
-                    <div ng-bind-html="question.text_EN"></div>
-                </div>
-                <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
-                    <div style="text-align:center; margin-bottom: 10px;">
-                        <span style="font-size:20px;">HTML (Français)</span>
-                    </div>
-                    <div ng-bind-html="question.text_FR"></div>
-                </div>
             </div>
             <div class="row">
                 <div class="col-xs-6 col-md-6" style="margin-bottom: 20px;">
@@ -84,6 +66,7 @@
                 <strong>{{question.type_EN}} / {{question.type_FR}}</strong>
             </div>
 
+            <div ng-hide="question.readOnly || question.final">
             <!-- Edit text box options -->
             <div class="col-xs-12 col-md-8" ng-if="question.typeId === '3'">
                 <p>No option.</p>
@@ -91,14 +74,11 @@
 
             <!-- Edit radio button options -->
             <div class="col-xs-12 col-md-8" ng-if="question.typeId === '4' || question.typeId === '1'">
-                <div class="input-group" style="margin-top:10px; margin-bottom:10px;width:100%;">
-                    Position English French
-                </div>
                 <div class="input-group" style="margin-top:5px; margin-bottom:5px;" ng-repeat="option in question.subOptions">
-                    <input class="form-control" style="width:20%" ng-change="setChangesMade()" type="number" placeholder="Position" ng-model="option.order" ng-disabled="question.readOnly || question.final" />
-                    <input class="form-control" style="width:40%" ng-change="setChangesMade()" type="text" placeholder="Text (EN)" ng-model="option.description_EN" ng-disabled="question.readOnly || question.final" />
-                    <input class="form-control" style="width:40%" ng-change="setChangesMade()" type="text" placeholder="Text (FR)" ng-model="option.description_FR" ng-disabled="question.readOnly || question.final" />
-                    <span class="input-group-btn"><button class="btn btn-default" ng-click="deleteOptions(option)" ng-disabled="question.readOnly || question.final"><span class="fa fa-minus"></span> Delete</button></span>
+                    <input class="form-control" style="width:20%" ng-change="setChangesMade();orderPreview();" type="number" placeholder="Position" ng-model="option.order" ng-disabled="question.readOnly || question.final" />
+                    <input class="form-control" style="width:40%" ng-change="setChangesMade();" type="text" placeholder="Text (EN)" ng-model="option.description_EN" ng-disabled="question.readOnly || question.final" />
+                    <input class="form-control" style="width:40%" ng-change="setChangesMade();" type="text" placeholder="Text (FR)" ng-model="option.description_FR" ng-disabled="question.readOnly || question.final" />
+                    <span class="input-group-btn"><button class="btn btn-default" ng-click="deleteOptions(option);orderPreview();" ng-disabled="question.readOnly || question.final"><span class="fa fa-minus"></span> Delete</button></span>
                 </div>
                 <button type="button" class="btn btn-default" style="float: left; margin-top:5px;" ng-click="addOptions()" ng-disabled="question.readOnly || question.final"><span class="fa fa-plus"></span> Add option</button>
             </div>
@@ -106,19 +86,98 @@
             <!-- Edit Sliders options -->
             <div class="col-xs-12 col-md-8" ng-if="question.typeId === '2'">
                 <div class="input-group" style="margin-top:10px; margin-bottom:10px;width:100%;">
-                    <input class="form-control" style="width:20%" ng-change="setChangesMade()" type="number" placeholder="Minimum value" ng-model="question.options.minValue" ng-disabled="question.readOnly || question.final" />
-                    <input class="form-control" style="width:35%" ng-change="setChangesMade()" type="text" ng-model="question.options.minCaption_EN" placeholder="Minimum caption (EN)" ng-disabled="question.readOnly || question.final" />
-                    <input class="form-control" style="width:35%" ng-change="setChangesMade()" type="text" ng-model="question.options.minCaption_FR" placeholder="Minimum caption (FR)" ng-disabled="question.readOnly || question.final" />
+                    <div style="display: block; float: left;width: 22%;">
+                        &nbsp;
+                    </div>
+                    <div style="display: block; float: left;width: 8%;">
+                        Value
+                    </div>
+                    <div style="display: block; float: left;width: 35%;">
+                        English
+                    </div>
+                    <div style="display: block; float: left;width: 35%;">
+                        French
+                    </div>
+
                 </div>
                 <div class="input-group" style="margin-top:10px; margin-bottom:10px;width:100%;">
-                    <input class="form-control" style="width:20%" ng-change="setChangesMade()" type="number" placeholder="Maximum value" ng-model="question.options.maxValue" ng-disabled="question.readOnly || question.final" />
-                    <input class="form-control" style="width:35%" ng-change="setChangesMade()" type="text" ng-model="question.options.maxCaption_EN" placeholder="Maximum caption (EN)" ng-disabled="question.readOnly || question.final" />
-                    <input class="form-control" style="width:35%" ng-change="setChangesMade()" type="text" ng-model="question.options.maxCaption_FR" placeholder="Maximum caption (FR)" ng-disabled="question.readOnly || question.final" />
+                    <span class="input-group-addon">&nbsp;Minimum settings</span>
+                    <input class="form-control" style="width:12%;" ng-change="setChangesMade();updateSlider();" min="1" type="number" placeholder="Minimum value" ng-model="question.options.minValue" ng-disabled="question.readOnly || question.final" />
+                    <input class="form-control" style="width:44%" ng-change="setChangesMade();updateSlider();" type="text" ng-model="question.options.minCaption_EN" placeholder="Minimum caption (EN)" ng-disabled="question.readOnly || question.final" />
+                    <input class="form-control" style="width:44%" ng-change="setChangesMade();updateSlider();" type="text" ng-model="question.options.minCaption_FR" placeholder="Minimum caption (FR)" ng-disabled="question.readOnly || question.final" />
                 </div>
                 <div class="input-group" style="margin-top:10px; margin-bottom:10px;width:100%;">
-                    <input class="form-control" style="width:20%" type="number" placeholder="Increment step" ng-model="question.options.increment" ng-disabled="question.readOnly || question.final" />
+                    <span class="input-group-addon">Maximum settings</span>
+                    <input class="form-control" style="width:12%" ng-change="setChangesMade();updateSlider();" min="1" type="number" placeholder="Maximum value" ng-model="question.options.maxValue" ng-disabled="question.readOnly || question.final" />
+                    <input class="form-control" style="width:44%" ng-change="setChangesMade();updateSlider();" type="text" ng-model="question.options.maxCaption_EN" placeholder="Maximum caption (EN)" ng-disabled="question.readOnly || question.final" />
+                    <input class="form-control" style="width:44%" ng-change="setChangesMade();updateSlider();" type="text" ng-model="question.options.maxCaption_FR" placeholder="Maximum caption (FR)" ng-disabled="question.readOnly || question.final" />
+                </div>
+                <div class="input-group" style="margin-top:10px; margin-bottom:10px;width:100%;">
+                    <span class="input-group-addon">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Increment&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                    <input class="form-control" style="width:12%" ng-change="setChangesMade();updateSlider();" type="number" min="1" placeholder="Increment step" ng-model="question.options.increment" ng-disabled="question.readOnly || question.final" />
                 </div>
             </div>
+            </div>
+
+            <!-- Preview -->
+            <div ng-class="question.readOnly || question.final ? 'col-xs-12' : 'col-md-4'" style="text-align:right">
+                <div style="height:10px; border-bottom:1px solid #6f5499; text-align:center; margin-bottom:10px;">
+                    <span style="background-color: #fff; padding: 0 10px; font-size:16px;">Question preview</span>
+                </div>
+                <div class="previewContainer" style="max-height: 300px;height:100%;">
+                    <div class="previewContent" ng-show="validSlider">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div style="margin-top:10px; margin-bottom:10px"; ng-bind-html="question.text_EN"></div>
+                                <div ng-if="question.typeId === '1'">
+                                    <div ng-repeat="option in question.subOptions">
+                                        <label><input type="checkbox" disabled> {{option.description_EN}}</label>
+                                    </div>
+                                </div>
+                                <div ng-if="question.typeId == '3'">
+                                    <textarea rows="3" cols="40" disabled>Type in your answer.</textarea>
+                                </div>
+                                <div ng-if="question.typeId == '2'">
+                                    <div ng-repeat="option in question.subOptions">
+                                        <label><input type="radio" disabled> {{option.description_EN}}</label>
+                                    </div>
+                                </div>
+                                <div ng-if="question.typeId == '4'">
+                                    <div ng-repeat="option in question.subOptions">
+                                        <label><input type="radio" disabled> {{option.description_EN}}</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div style="margin-top:10px; margin-bottom:10px"; ng-bind-html="question.text_FR"></div>
+                                <div ng-if="question.typeId === '1'">
+                                    <div ng-repeat="option in question.subOptions">
+                                        <label><input type="checkbox" disabled> {{option.description_FR}}</label>
+                                    </div>
+                                </div>
+                                <div ng-if="question.typeId == '2'">
+                                    <div ng-repeat="option in question.subOptions">
+                                        <label><input type="radio" disabled> {{option.description_FR}}</label>
+                                    </div>
+                                </div>
+                                <div ng-if="question.typeId == '3'">
+                                    <textarea rows="3" cols="40" disabled>Entrez votre réponse.</textarea>
+                                </div>
+                                <div ng-if="question.typeId == '4'">
+                                    <div ng-repeat="option in question.subOptions">
+                                        <label><input type="radio" disabled> {{option.description_FR}}</label>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="previewContent" ng-hide="validSlider">
+                        <p>Invalid slider settings.</p>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
         <!-- SECTION: Libraries -->
