--- a/css/style.css
+++ b/css/style.css
@@ -1828,7 +1828,13 @@ footer {
     }
 }
 
+.previewContent h3 {
+    font-size: 20px;
+    font-weight: bold;
+    margin-top:10px;
+}
+
 .previewContent h4 {
     font-weight:bold;
-    margin-top:30px;
+    margin-top:20px;
 }
